--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,17 @@ fastapi==0.104.1
 uvicorn==0.24.0
 pydantic==2.5.0
 python-dotenv==1.0.0
-google-generativeai==0.3.1
-transformers==4.35.0
-sentence-transformers==2.2.2
-faiss-cpu
+google-generativeai>=0.8.0
+transformers>=4.41.0
+sentence-transformers>=3.0.0
+huggingface-hub>=0.23.0
+accelerate>=0.31.0
+torch>=2.0.0
+faiss-cpu>=1.7.4
 orjson
 pandas
-pytest
-python-multipart
-requests
 tqdm
 gunicorn
+python-multipart
+requests
+pytest
